# ClipForge

./: .env.example  .gitignore  README.md  package-lock.json  package.json  start.sh  tsconfig.json  vitest.config.ts
docs/: DEPENDENCIES.md
music/: README.md
perception/: .gitignore  README.md  pyproject.toml
perception/clipforge_perception/: __init__.py  cli.py  ffmpeg.py  pipeline.py
perception/clipforge_perception/producers/: base.py  clip_scenes.py  mock.py  pyannote_diar.py  yamnet_events.py
perception/clipforge_perception/schema/: __init__.py  semantic_timeline.v1.schema.json
perception/fixtures/: golden_timeline.json
perception/tests/: conftest.py  test_cli.py  test_clip_producer.py  test_ffmpeg_helpers.py  test_mock_producer.py  test_pipeline_merge.py  test_pyannote_producer.py  test_schema.py  test_speech_spans.py  test_yamnet_producer.py
remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/src/: Broll.tsx  Callout.tsx  Caption.tsx  CaptionedClip.tsx  HookCard.tsx  MontageVideo.tsx  RankRotVideo.tsx  RankingVideo.tsx  Root.tsx  ThumbCard.tsx  brollLogic.test.ts  brollLogic.ts  captionLogic.test.ts  captionLogic.ts  captionStyle.ts  montageLogic.ts  punchZoom.test.ts  punchZoom.ts  rankingLogic.test.ts  rankingLogic.ts  rankrotLogic.test.ts  rankrotLogic.ts  reframe.test.ts  reframe.ts  thumbLogic.test.ts  thumbLogic.ts
src/: modes.ts
src/analysis/: arcChunker.ts  arcCompleter.ts  arcEvidence.ts  filler.ts  (+11 more)
tests/: modes.test.ts
ui/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+292 files in other folders)
