[project]
name = "clipforge-perception"
version = "0.1.0"
description = "ClipForge AI perception microservice — media to semantic-timeline facts (never reasoning)."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
real = [
  "pyannote.audio>=3.1,<4",
  "torch>=2.1",
  "tensorflow>=2.16",
  "tensorflow-hub>=0.16",
  "numpy>=1.26",
]

[project.scripts]
clipforge-perception = "clipforge_perception.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["clipforge_perception*"]

[tool.setuptools.package-data]
clipforge_perception = ["schema/*.json"]
